# RIS_Scraper

./: .gitignore  AGENTS.md  License  README.md  __init.py__  abgb_komplet.py  analyse_abgb.py  main.py  pyproject.toml
docs/: ris_api_v2.6_help.md  ris_api_v2.6_help_full.md
ris_abgb/: cli.py  config.py  html_parser.py  index_scraper.py  search.py  soap_client.py  toc_parser.py  writer.py
ris_law/: __init__.py  api.py  cli_main.py  config.py  exceptions.py  full_export.py  html_parser.py  http_client.py  index_scraper.py  records.py  ris_api.py  search.py  soap_client.py  toc_parser.py  types.py  writer.py
ris_law/data/: laws.json  laws_enriched.json
ris_law/tools/: build_law_index.py  check_laws_integrity.py  enrich_fallbacks.py  filter_law_index.py  merge_enriched_into_laws.py  split_paragraphs_from_articles.py
