[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ris-law"
version = "0.1.0"
description = "Leichte Python-Bibliothek zum Abruf österreichischer Bundesgesetze (RIS) als JSONL"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

authors = [
  { name = "Christian Schneidewind" }
]

dependencies = [
  "requests>=2.32",
  "beautifulsoup4>=4.12",
  "lxml>=5.2"
]

keywords = ["RIS", "Rechtsinformationssystem", "Österreich", "Gesetze", "Scraper", "JSONL"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Topic :: Software Development :: Libraries",
  "Topic :: Text Processing :: Markup :: HTML",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/christianschneidewind/ris-law"
Documentation = "https://github.com/christianschneidewind/ris-law#readme"
Source = "https://github.com/christianschneidewind/ris-law"
Issues = "https://github.com/christianschneidewind/ris-law/issues"

# CLI-Einstiegspunkt
[project.scripts]
ris-law = "ris_law.cli_main:main"

# ---- setuptools-spezifisch ----
[tool.setuptools]
package-dir = { "" = "." }

# NUR das eigentliche Paket (nicht tools/, cache/, tests/)
[tool.setuptools.packages.find]
where = ["."]
include = ["ris_law*"]
exclude = ["tools*", "cache*", "cache_toc*", "tests*", "build*", "dist*"]

# Optionale Paketdaten (z. B. laws.json)
[tool.setuptools.package-data]
"ris_law" = ["data/*.json", "data/*.jsonl"]
